--- a/POEwpf/window4.xaml
+++ b/POEwpf/window4.xaml
@@ -17,7 +17,7 @@
             <Button x:Name="btnResetRecipe" Content="Reset recipe" HorizontalAlignment="Center" Margin="0,459,0,0" VerticalAlignment="Top" FontSize="22" Height="122" Width="214" Click="btnResetRecipe_Click" FontWeight="Bold"/>
             <Button x:Name="btnTriple" Content="Triple" HorizontalAlignment="Left" Margin="409,267,0,0" VerticalAlignment="Top" FontSize="22" Width="139" Click="btnTriple_Click" Height="51" FontWeight="Bold"/>
             <Button x:Name="btnDouble" Content="Double" HorizontalAlignment="Left" Margin="206,267,0,0" VerticalAlignment="Top" FontSize="22" Width="137" Click="btnDouble_Click" Height="51" FontWeight="Bold"/>
-            <Button x:Name="btnHalf" Content="Half" HorizontalAlignment="Left" Margin="10,267,0,0" VerticalAlignment="Top" FontSize="22" Width="139" Click="btnHalf_Click" Height="51" FontWeight="Bold"/>
+            <Button x:Name="btnScale" Content="Half" HorizontalAlignment="Left" Margin="10,267,0,0" VerticalAlignment="Top" FontSize="22" Width="139" Click="btnHalf_Click" Height="51" FontWeight="Bold"/>
             <Button x:Name="btnBackToViewRecipe2" Content="&lt;" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="36" FontWeight="Bold" RenderTransformOrigin="-1.544,-1.876" Click="btnBackToViewRecipe2_Click" Height="53" Width="46"/>
             <Label x:Name="lblScaleBy" Content="Scale by:" HorizontalAlignment="Center" Margin="0,152,0,0" VerticalAlignment="Top" FontSize="36" Height="71" Width="146"/>
 
