--- a/POEwpf/window6.xaml
+++ b/POEwpf/window6.xaml
@@ -6,19 +6,19 @@
         xmlns:local="clr-namespace:POEwpf"
         mc:Ignorable="d"
         Title="window6" Height="670" Width="575">
-    <Grid>
+    <Grid x:Name="panel1">
         <Grid.Background>
             <ImageBrush ImageSource="/infoPage3.jpg"/>
         </Grid.Background>
-        <Button x:Name="btnExit6" Content="Exit" HorizontalAlignment="Left" Margin="480,595,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold" Width="70" Height="31"/>
-        <Button x:Name="btnFoodGroupFilter" Content="Food group" HorizontalAlignment="Left" Margin="244,107,0,0" VerticalAlignment="Top" FontSize="16" Width="99" FontWeight="Bold" Height="31"/>
-        <Button x:Name="btnCalorieFilter" Content="Calorie count" HorizontalAlignment="Left" Margin="437,107,0,0" VerticalAlignment="Top" FontSize="16" Width="113" FontWeight="Bold" Height="31"/>
-        <Button x:Name="btnIngreFilter" Content="Ingredient" HorizontalAlignment="Left" Margin="29,106,0,0" VerticalAlignment="Top" FontSize="16" Width="99" FontWeight="Bold" Height="32"/>
+        <Button x:Name="btnMenu" Content="Back to Menu" HorizontalAlignment="Left" Margin="437,595,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold" Width="113" Height="31" Click="btnMenu_Click"/>
+        <Button x:Name="btnFoodGroupFilter" Content="Food group" HorizontalAlignment="Left" Margin="244,107,0,0" VerticalAlignment="Top" FontSize="16" Width="99" FontWeight="Bold" Height="31" Click="btnFoodGroupFilter_Click"/>
+        <Button x:Name="btnCalorieFilter" Content="Calorie count" HorizontalAlignment="Left" Margin="437,107,0,0" VerticalAlignment="Top" FontSize="16" Width="113" FontWeight="Bold" Height="31" Click="btnCalorieFilter_Click"/>
+        <Button x:Name="btnIngreFilter" Content="Ingredient" HorizontalAlignment="Left" Margin="29,106,0,0" VerticalAlignment="Top" FontSize="16" Width="99" FontWeight="Bold" Height="32" Click="btnIngreFilter_Click"/>
         <Button x:Name="btnBackToChooseRecipe" Content="&lt;" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="9" FontWeight="Bold"/>
         <Label x:Name="lbSearchByFilter" Content="Search by filter" HorizontalAlignment="Left" Margin="29,11,0,0" VerticalAlignment="Top" FontSize="26" Width="363" Height="47"/>
         <Label x:Name="lbFilter" Content="Filter by:" HorizontalAlignment="Left" Margin="25,58,0,0" VerticalAlignment="Top" FontSize="20" Width="318" Height="41"/>
         <Label x:Name="lbFilterOoptionLabel" Content="Filter option label displayed here" HorizontalAlignment="Left" Margin="32,177,0,0" VerticalAlignment="Top" FontSize="16" Width="262" Height="36"/>
-        <TextBox x:Name="txtFilterOptionText" HorizontalAlignment="Left" Margin="308,180,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="242" FontSize="16" Height="30"/>
+        <TextBox x:Name="tbFilterByText" HorizontalAlignment="Left" Margin="308,180,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="242" FontSize="16" Height="30"/>
         <Label x:Name="lbDisplayFilterRecipes" HorizontalAlignment="Left" Margin="56,262,0,0" VerticalAlignment="Top" FontSize="16" Width="467" Height="240" Background="#FFD9DDE0"/>
 
     </Grid>
