--- a/POEwpf/window2.xaml
+++ b/POEwpf/window2.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:POEwpf"
         mc:Ignorable="d"
-        Title="window2" Height="670" Width="575">
+        Title="window2" Height="670" Width="575"
+        WindowStartupLocation="CenterScreen">
     <ScrollViewer VerticalScrollBarVisibility="Auto">
         <Grid >
             <Grid.Background>
@@ -20,25 +21,26 @@
             <Label x:Name="lblingreCalories" Content="Enter calorie amount:" HorizontalAlignment="Left" Margin="10,188,0,0" VerticalAlignment="Top" Height="33" Width="206" FontSize="18"/>
             <Button x:Name="btnClearIngre" Content="Clear" HorizontalAlignment="Left" Margin="23,272,0,0" VerticalAlignment="Top" Height="33" FontSize="20" Width="104" RenderTransformOrigin="0.786,0.535" Click="btnClearIngre_Click" FontWeight="Bold"/>
             <Button x:Name="btnAddIngre" Content="Add ingredient" HorizontalAlignment="Left" Margin="219,272,0,0" VerticalAlignment="Top" Height="34" FontSize="20" Width="190" FontWeight="Bold" Click="btnAddIngre_Click"/>
-            <TextBox x:Name="txtRecipeName" HorizontalAlignment="Left" Margin="226,20,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="196" FontSize="20" Height="24"/>
-            <TextBox x:Name="txtUnitOfMesaure" HorizontalAlignment="Left" Margin="351,219,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="196" FontSize="20" Height="24"/>
-            <TextBox x:Name="UpDownCalories" HorizontalAlignment="Left" Margin="351,190,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="196" FontSize="20" Height="25"/>
-            <TextBox x:Name="UpDownQuantity" HorizontalAlignment="Left" Margin="351,162,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="196" FontSize="20" Height="25"/>
-            <ComboBox x:Name="cbFoodGroup"  HorizontalAlignment="Left" Margin="351,131,0,0" VerticalAlignment="Top" Width="196" FontSize="16">
+            <TextBox x:Name="txtRecipeName" HorizontalAlignment="Left" Margin="226,20,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="196" FontSize="20" Height="31"/>
+            <TextBox x:Name="txtUnitOfMesaure" HorizontalAlignment="Left" Margin="351,219,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="196" FontSize="20" Height="30"/>
+            <TextBox x:Name="UpDownCalories" HorizontalAlignment="Left" Margin="351,190,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="196" FontSize="20" Height="30"/>
+            <TextBox x:Name="UpDownQuantity" HorizontalAlignment="Left" Margin="351,162,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="196" FontSize="20" Height="30"/>
+            <ComboBox x:Name="cbFoodGroup"  HorizontalAlignment="Left" Margin="351,131,0,0" VerticalAlignment="Top" Width="196" FontSize="16" Height="30">
                 <ComboBoxItem Content="Carbs/Grains"/>
                 <ComboBoxItem Content="Protein"/>
                 <ComboBoxItem Content="Fats"/>
                 <ComboBoxItem Content="Dairy"/>
                 <ComboBoxItem Content="Fruit/Veg"/>
+                <ComboBoxItem Content="Root"/>
                 <ComboBoxItem Content="Water"/>
             </ComboBox>
-            <TextBox x:Name="txtIngreName" HorizontalAlignment="Left" Margin="351,101,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="196" FontSize="20" Height="25"/>
-            <TextBox x:Name="UpDownIngre" HorizontalAlignment="Left" Margin="351,71,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="196" FontSize="20" Height="25"/>
+            <TextBox x:Name="txtIngreName" HorizontalAlignment="Left" Margin="351,101,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="196" FontSize="20" Height="30"/>
+            <TextBox x:Name="UpDownIngre" HorizontalAlignment="Left" Margin="351,71,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="196" FontSize="20" Height="30"/>
             <Button x:Name="btnSetRecipe" Content="Set" Margin="443,17,0,0" VerticalAlignment="Top" Height="34" FontSize="20" Width="104" RenderTransformOrigin="0.5,0.5" Click="btnSetRecipe_Click" FontWeight="Bold" HorizontalAlignment="Left"/>
             <Label x:Name="lblStepDescription" Content="Enter step description:" HorizontalAlignment="Left" Margin="23,365,0,0" VerticalAlignment="Top" Height="33" Width="248" FontSize="18"/>
             <Label x:Name="lblStepNo" Content="Enter number of steps:" HorizontalAlignment="Left" Margin="23,325,0,0" VerticalAlignment="Top" Height="37" Width="230" FontSize="18"/>
             <TextBox x:Name="txtStepDescription" HorizontalAlignment="Left" Margin="15,398,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="532" FontSize="20" Height="122"/>
-            <TextBox x:Name="UpDownSteps" HorizontalAlignment="Left" Margin="346,325,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="201" FontSize="20" Height="25"/>
+            <TextBox x:Name="UpDownSteps" HorizontalAlignment="Left" Margin="346,325,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="201" FontSize="20" Height="30"/>
             <Button x:Name="btnAddRecipe" Content="Add recipe" HorizontalAlignment="Left" Margin="15,587,0,0" VerticalAlignment="Top" Height="35" FontSize="20" Width="138" RenderTransformOrigin="0.778,1.058" Click="btnAddRecipe_Click" FontWeight="Bold"/>
             <Button x:Name="btnClearStep" Content="Clear" HorizontalAlignment="Left" Margin="15,533,0,0" VerticalAlignment="Top" Height="34" FontSize="20" Width="138" RenderTransformOrigin="0.786,0.535" Click="btnClearStep_Click" FontWeight="Bold"/>
             <Button x:Name="btnAddStep" Content="Add step" HorizontalAlignment="Center" Margin="0,533,0,0" VerticalAlignment="Top" Height="34" FontSize="20" Width="139" RenderTransformOrigin="0.786,0.535" Click="btnAddStep_Click" FontWeight="Bold"/>
