--- a/POEwpf/window3.xaml
+++ b/POEwpf/window3.xaml
@@ -5,13 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:POEwpf"
         mc:Ignorable="d"
-        Title="window3" Height="670" Width="575">
+        Title="window3" Height="670" Width="575"
+        WindowStartupLocation="CenterScreen">
     <ScrollViewer VerticalScrollBarVisibility="Auto">
         <Grid >
             <Grid.Background>
                 <ImageBrush ImageSource="/Images/RecpDetails3.jpg"/>
             </Grid.Background>
-            <Label x:Name="lbDisplayIngreAndSteps" Content="" HorizontalAlignment="Center" Margin="0,76,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" RenderTransformOrigin="-0.289,0.32" Height="486" Width="486" Background="#FFA4A4A4" OpacityMask="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}"/>
+            <ScrollViewer VerticalScrollBarVisibility="Auto">
+                <Label x:Name="lbRecipeDisplay2" Content="" HorizontalAlignment="Center" Margin="0,76,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" RenderTransformOrigin="-0.289,0.32" Height="486" Width="486" Background="#FFA4A4A4" OpacityMask="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}"/>
+            </ScrollViewer>
+            
             <Button x:Name="btnMenu" Content="Back to menu" HorizontalAlignment="Left" Margin="376,596,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" Click="btnMenu_Click" Width="154" Height="48"/>
             <Button x:Name="btnBackToAddRecipe1" Content="&lt;" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontWeight="Bold" Height="37" Width="42" Click="btnBackToAddRecipe1_Click" FontSize="24"/>
             <TextBox x:Name="txtRecipeName2" HorizontalAlignment="Left" Margin="57,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="451" FontSize="24" Height="37"/>
