--- a/POEwpf/window5.xaml
+++ b/POEwpf/window5.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:POEwpf"
         mc:Ignorable="d"
-        Title="window5" Height="670" Width="575">
+        Title="window5" Height="670" Width="575"
+        WindowStartupLocation="CenterScreen">
     <ScrollViewer VerticalScrollBarVisibility="Auto">
         <Grid Height="654" Width="610">
             <Grid.Background>
@@ -14,9 +15,11 @@
             <Button x:Name="btnMenu" Content="Back to Menu" HorizontalAlignment="Left" Margin="417,598,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold" Width="115" Click="btnMenu_Click" Height="30"/>
             <Button x:Name="btnViewRecipe" Content="View recipe" HorizontalAlignment="Left" Margin="198,192,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold" Height="42" Width="119" Click="btnViewRecipe_Click"/>
             <Button x:Name="btnBackToViewRecipe" Content="&lt;" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="36" FontWeight="Bold" Click="btnBackToViewRecipe_Click" Height="54" Width="30"/>
+            
             <Label x:Name="lbDisplaySelectedRecipe" Content="..." HorizontalAlignment="Left" Margin="45,261,0,0" VerticalAlignment="Top" FontSize="16" Height="287" Width="448" Background="#FFA7A8AA"/>
+            
             <Label x:Name="lblListOfAllRecipes" Content="List of all recipes" HorizontalAlignment="Right" Margin="0,10,109,0" VerticalAlignment="Top" FontSize="24" Width="411" Background="#FFF9F9F9" Height="48"/>
-            <ListBox x:Name="lbRecipeOptions" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="45,79,72,482" FontSize="16"/>
+            <ListBox x:Name="lbRecipeOptions" Margin="45,79,72,482" FontSize="16"/>
 
         </Grid>
     </ScrollViewer>
