--- a/POEwpf/window3.xaml
+++ b/POEwpf/window3.xaml
@@ -13,12 +13,12 @@
                 <ImageBrush ImageSource="/Images/RecpDetails3.jpg"/>
             </Grid.Background>
             <ScrollViewer VerticalScrollBarVisibility="Auto">
-                <Label x:Name="lbRecipeDisplay2" Content="" HorizontalAlignment="Center" Margin="0,76,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" RenderTransformOrigin="-0.289,0.32" Height="486" Width="486" Background="#FFA4A4A4" OpacityMask="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}"/>
+                <Label x:Name="lbRecipeDisplay2" Content="" HorizontalAlignment="Center" Margin="0,76,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" RenderTransformOrigin="-0.289,0.32" Height="486" Width="486" Background="#FFA4A4A4" OpacityMask="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" FontFamily="Segoe UI"/>
             </ScrollViewer>
             
-            <Button x:Name="btnMenu" Content="Back to menu" HorizontalAlignment="Left" Margin="376,596,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" Click="btnMenu_Click" Width="154" Height="48"/>
+            <Button x:Name="btnMenu" Content="Back to Menu" HorizontalAlignment="Left" Margin="376,596,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" Click="btnMenu_Click" Width="154" Height="48" FontFamily="Segoe Print"/>
             <Button x:Name="btnBackToAddRecipe1" Content="&lt;" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontWeight="Bold" Height="37" Width="42" Click="btnBackToAddRecipe1_Click" FontSize="24"/>
-            <TextBox x:Name="txtRecipeName2" HorizontalAlignment="Left" Margin="57,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="451" FontSize="24" Height="37"/>
+            <TextBox x:Name="txtRecipeName2" HorizontalAlignment="Left" Margin="57,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="451" FontSize="24" Height="37" Background="#FF9EA09D" FontFamily="Segoe Print"/>
 
         </Grid>
     </ScrollViewer>
