--- a/POEwpf/window6.xaml
+++ b/POEwpf/window6.xaml
@@ -8,14 +8,17 @@
         Title="window6" Height="670" Width="575"
         WindowStartupLocation="CenterScreen">
     <Grid x:Name="panel1">
+        <Grid.Background>
+            <ImageBrush ImageSource="/infoPage3.jpg"/>
+        </Grid.Background>
 
-        <Button x:Name="btnMenu" Content="Back to Menu" HorizontalAlignment="Left" Margin="437,579,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold" Width="113" Height="31" Click="btnMenu_Click"/>
+        <Button x:Name="btnMenu" Content="Back to Menu" HorizontalAlignment="Left" Margin="419,579,0,0" VerticalAlignment="Top" FontSize="18" FontWeight="Bold" Width="131" Height="31" Click="btnMenu_Click" FontFamily="Segoe Print"/>
         <Button x:Name="btnBackToChooseRecipe" Content="&lt;" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="9" FontWeight="Bold"/>
-        <Label x:Name="lbSearchByFilter" Content="Search by filter" HorizontalAlignment="Left" Margin="29,11,0,0" VerticalAlignment="Top" FontSize="26" Width="363" Height="47"/>
-        <Label x:Name="lbFilter" Content="Filter by:" HorizontalAlignment="Left" Margin="229,58,0,0" VerticalAlignment="Top" FontSize="20" Width="318" Height="41"/>
-        <TextBox x:Name="tbFilterByTextIngre"  HorizontalAlignment="Left" Margin="10,171,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="142" FontSize="16" Height="30"/>
-        <TextBox x:Name="tbFilterByTextCalories"  HorizontalAlignment="Left" Margin="437,171,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="128" FontSize="16" Height="30"/>
-        <ComboBox x:Name="cbFoodGroup" SelectionChanged="OnSelectedChanged" HorizontalAlignment="Left" Margin="210,171,0,0" VerticalAlignment="Top" Width="166" FontSize="16">
+        <Label x:Name="lbSearchByFilter" Content="Search by filter" HorizontalAlignment="Left" Margin="29,11,0,0" VerticalAlignment="Top" FontSize="26" Width="363" Height="67" FontFamily="Segoe Print" FontWeight="Bold"/>
+        <Label x:Name="lbFilter" Content="Filter by:" HorizontalAlignment="Left" Margin="229,58,0,0" VerticalAlignment="Top" FontSize="22" Width="318" Height="41" FontFamily="Segoe Print" FontWeight="Bold"/>
+        <TextBox x:Name="tbFilterByTextIngre"  HorizontalAlignment="Left" Margin="10,171,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="142" FontSize="16" Height="30" FontFamily="Segoe Print" FontWeight="Bold"/>
+        <TextBox x:Name="tbFilterByTextCalories"  HorizontalAlignment="Left" Margin="419,171,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="128" FontSize="16" Height="30" FontFamily="Segoe Print" FontWeight="Bold"/>
+        <ComboBox x:Name="cbFoodGroup" SelectionChanged="OnSelectedChanged" HorizontalAlignment="Left" Margin="210,171,0,0" VerticalAlignment="Top" Width="166" FontSize="16" FontFamily="Segoe Print" FontWeight="Bold">
             <ComboBoxItem Content="Carbs/Grains"/>
             <ComboBoxItem Content="Protein"/>
             <ComboBoxItem Content="Fats/Sugars"/>
@@ -24,12 +27,12 @@
             <ComboBoxItem Content="Root"/>
             <ComboBoxItem Content="Water"/>
         </ComboBox>
-        <Button x:Name="btnFilter" Content="Filter" HorizontalAlignment="Center" Margin="0,269,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" Width="117" Height="37" Click="btnFilter_Click"/>
-        <ListBox x:Name="lbDisplayFilteredRecipes6" DisplayMemberPath="RecipeName" HorizontalAlignment="Left" Height="240" Margin="32,327,0,0" VerticalAlignment="Top" Width="518" BorderBrush="#FFA9B2CC" Background="#FFC59A9A" FontSize="20"/>
-        <Button x:Name="btnClear" Content="Clear" HorizontalAlignment="Left" Margin="46,574,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" Width="117" Height="36" Click="btnClear_Click"/>
-        <Label x:Name="lbFilter_Copy" Content="Ingredient" HorizontalAlignment="Left" Margin="22,111,0,0" VerticalAlignment="Top" FontSize="16" Width="118" Height="41"/>
-        <Label x:Name="lbFilter_Copy1" Content="Food group" HorizontalAlignment="Left" Margin="230,111,0,0" VerticalAlignment="Top" FontSize="16" Width="126" Height="41"/>
-        <Label x:Name="lbFilter_Copy2" Content="Maximum calories" HorizontalAlignment="Left" Margin="437,111,0,0" VerticalAlignment="Top" FontSize="16" Width="162" Height="48"/>
+        <Button x:Name="btnFilter" Content="Filter" HorizontalAlignment="Center" Margin="0,269,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" Width="117" Height="37" Click="btnFilter_Click" FontFamily="Segoe Print"/>
+        <ListBox x:Name="lbDisplayFilteredRecipes6" DisplayMemberPath="RecipeName" HorizontalAlignment="Left" Height="240" Margin="32,327,0,0" VerticalAlignment="Top" Width="518" BorderBrush="#FFA9B2CC" Background="#FFDDDDDD" FontSize="20" FontWeight="Bold"/>
+        <Button x:Name="btnClear" Content="Clear" HorizontalAlignment="Left" Margin="46,574,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" Width="117" Height="36" Click="btnClear_Click" FontFamily="Segoe Print"/>
+        <Label x:Name="lbFilter_Copy" Content="Ingredient" HorizontalAlignment="Left" Margin="29,125,0,0" VerticalAlignment="Top" FontSize="16" Width="118" Height="41" FontFamily="Segoe Print" FontWeight="Bold"/>
+        <Label x:Name="lbFilter_Copy1" Content="Food group" HorizontalAlignment="Left" Margin="230,125,0,0" VerticalAlignment="Top" FontSize="16" Width="126" Height="41" FontFamily="Segoe Print" FontWeight="Bold"/>
+        <Label x:Name="lbFilter_Copy2" Content="Maximum calories" HorizontalAlignment="Left" Margin="403,125,0,0" VerticalAlignment="Top" FontSize="16" Width="162" Height="48" FontFamily="Segoe Print" FontWeight="Bold"/>
 
     </Grid>
 </Window>
